# walkie_grotkie

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: grot-animation-guide.md
pixel-art-editor/: AGENTS.md  README.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
pixel-art-editor/e2e/: editor.spec.ts
pixel-art-editor/src/: App.css  App.tsx
pixel-art-editor/src/components/: CanvasViewport.css  CanvasViewport.tsx  ColorPalette.css  ColorPalette.tsx  EditorScreen.css  EditorScreen.tsx  StartupScreen.css  StartupScreen.tsx  StatusBar.css  StatusBar.tsx  Toolbar.css  Toolbar.tsx
pixel-art-editor/src/core/: PixelBuffer.test.ts  PixelBuffer.ts  automation.ts  history.test.ts  history.ts  io.test.ts  io.ts  render.ts  tools.test.ts  tools.ts
pixel-art-editor/src/hooks/: usePixelEditor.ts
pixel-art-editor/test-results/: .last-run.json
src/idotmatrix_upload/: __init__.py  animations.py  ble.py  chat.py  chat_commands.py  cli.py  device_cache.py  generate.py  openai_chat.py  prompts.py  protocol.py  service.py  sprite.py  upload.py  voice.py  voice_chat.py  ws_server.py
src/walkie_grotkie/: __init__.py  animations.py  ble.py  chat.py  cli.py  device_cache.py  generate.py  openai_chat.py  preprocess.py  prompts.py  service.py  upload.py  voice.py  ws_server.py
tests/: test_animations.py  test_ble.py  test_chat.py  test_cli.py  test_device_cache.py  test_generate.py  test_openai_chat.py  test_preprocess.py  test_protocol.py  test_service.py  test_sprite.py  test_upload.py  test_voice.py  test_voice_chat.py  test_ws_server.py
tools/: ble_deep_probe.py  ble_explore.py  ble_probe.py
walkie-talkie/: .gitignore  AGENTS.md  INSTALL.md  README.md  build-sidecar.sh  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
walkie-talkie/binaries/: grot-server
walkie-talkie/src/: App.tsx  main.tsx
walkie-talkie/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
walkie-talkie/src-tauri/capabilities/: default.json
walkie-talkie/src-tauri/icons/: icon.icns
walkie-talkie/src-tauri/src/: lib.rs  main.rs
walkie-talkie/src/__tests__/: HelpView.test.tsx  LEDDisplay.test.tsx  PushToTalkButton.test.tsx  SettingsView.test.tsx  SmallButtons.test.tsx  VoiceView.test.tsx  (+6 more)
(+14 files in other folders)
