[project]
name = "walkie-grotkie"
version = "0.1.0"
description = "CLI tool for uploading GIF animations to iDotMatrix LED matrix devices over BLE"
requires-python = ">=3.11"
dependencies = [
    "bleak>=0.21",
    "Pillow>=10.0",
    "click>=8.0",
    "python-dotenv>=1.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
chat = [
    "anthropic>=0.39",
    "rich>=13.0",
]
voice = [
    "openai>=1.0",
    "sounddevice>=0.5",
    "numpy>=1.24",
    "pynput>=1.7",
    "rich>=13.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
walkie-grotkie = "walkie_grotkie.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    # AsyncMock creates coroutines during test-to-test GC handoff; these are
    # harmless artefacts of the mock framework, not real unawaited coroutines.
    "ignore:coroutine '.*' was never awaited:RuntimeWarning",
]
