[package]
name = "walkie-talkie"
version = "0.1.0"
edition = "2021"
description = "Grot Walkie-Talkie — voice chat UI for the iDotMatrix LED matrix"
authors = []

[lib]
name = "walkie_talkie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.4.2"
